--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>color change</title>
-    <link rel="stylesheet" href="/project one/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <button type="button" class="btn">press here to change color</button>
 
-<script src="/project one/script.js"></script>
+<script src="script.js"></script>
     
 </body>
 </html>
